--- a/step-10.html
+++ b/step-10.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="images/instore-fav-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <title>Test Update</title>
+    <title>Instore Reviews</title>
 </head>
 <body>
     <div class="register-container">
