--- a/step-06.html
+++ b/step-06.html
@@ -30,7 +30,10 @@
                             </div>
                             <div>
                                 <h6 class="business-header">Business Address</h6>
-                                <h6 class="business-name">1234 Elm Street Anytown, USA, 12345</h6>
+                                <div class="my-text-container">
+                                    <h6 class="business-name">1234 Elm Street Anytown, USA, 12345 1234 Elm Street Anytown, USA, 12345 1234 Elm Street Anytown, USA, 12345</h6>
+                                </div>
+                                
                             </div>
                         </div>
                     </div> 
@@ -78,12 +81,6 @@
                         <button  onclick="navigateToNextPage()" class="flex-submit bg-red btn-flex"  > YES, COONECT ME </button>
                     </div>  
                 </div>
-
-
-
-
-
-
 
             </div>
         </div>
