--- a/step-08.html
+++ b/step-08.html
@@ -29,7 +29,29 @@
                             </select>
                         </div> 
 
-                        <img src="images/decal.png"  style="width: 90%;" class="rounded mx-auto d-block" alt="...">
+                        <!-- <img src="images/decal.png"  style="width: 80%;" class="rounded mx-auto d-block" alt="..."> -->
+
+                        <div id="imageCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="images/decal.png" class="d-block decals" alt="Image 1">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="images/final-step-03.png" class="d-block decals" alt="Image 2">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="images/step-06-pic.png"class="d-block decals" alt="Image 3">
+                              </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                          </div>
 
                         <div class="input-field">  
                             <button  onclick="navigateToNextPage()"  class="submit bg-red"> CONTINUE </button>
@@ -41,6 +63,10 @@
         </div>
     </div>
 
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script>
         function navigateToNextPage() {
             // Change 'page2.html' to the actual filename of your next HTML page
@@ -48,5 +74,8 @@
             window.location.href = 'step-09.html';
         }
     </script>
+
+
+    
 </body>
 </html>
