--- a/yes-no.html
+++ b/yes-no.html
@@ -30,9 +30,13 @@
                             </div>
                         </div> 
 
-                        <div class="input-field">  
-                            <button class="submit bg-red mx-auto">Yes</button>
+                        <div class="input-field" style="margin-top: 100px;">  
+                            <button class="submit bg-blue mx-auto" style="width:300px">Yes</button>
                         </div> 
+
+                        <div class="input-field">  
+                            <button class="submit bg-red mx-auto" style="width:300px">No</button>
+                        </div>
                         
                     </div>  
                 </form>
@@ -40,20 +44,8 @@
                 
             </div>
         </div>
-    </div>
+    </div>   
 
-    <script>
-         function edit() {
-            // Change 'page2.html' to the actual filename of your next HTML page
-            event.preventDefault();
-            window.location.href = 'step-08.html';
-        }
-
-        function navigateToNextPage() {
-            // Change 'page2.html' to the actual filename of your next HTML page
-            event.preventDefault();
-            window.location.href = 'step-11.html';
-        }
-    </script>
+ 
 </body>
 </html>
